@@ -1,3 +1,7 @@
+2021-01-08  Timm Bäder  <tbaeder@redhat.com>
+
+	* strip.c (handle_elf): Expand inlined function check_preserved.
+
 2021-01-12  Mark Wielaard  <mark@klomp.org>
 
 	* elflint.c (EXTRA_SHFLAGS): New define.
